--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "antlr4ts": "^0.5.0-alpha.4",
-    "complex.js": "^2.1.1"
+    "complex.js": "^2.1.1",
+    "yargs": "^17.6.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@types/yargs": "^17.0.13",
     "antlr4ts-cli": "^0.5.0-alpha.4",
     "typescript": "^4.9.3"
   }
