--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/perfy": "^1.1.0",
+    "ansi-colors": "^4.1.3",
     "antlr4ts": "^0.5.0-alpha.4",
     "complex.js": "^2.1.1",
+    "perfy": "^1.1.5",
     "yargs": "^17.6.2"
   },
   "devDependencies": {
