--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ansi-colors": "^4.1.3",
     "antlr4ts": "^0.5.0-alpha.4",
     "complex.js": "^2.1.1",
+    "nodeplotlib": "^1.1.2",
     "perfy": "^1.1.5",
     "yargs": "^17.6.2"
   },
