Add REPL feature
* Changes file execution to using --file flag
* Changed runner visitor to accept an initial qubit state

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "complex.js": "^2.1.1",
     "nodeplotlib": "^1.1.2",
     "perfy": "^1.1.5",
+    "prompt-sync": "^4.2.0",
     "yargs": "^17.6.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@types/prompt-sync": "^4.2.0",
     "@types/yargs": "^17.0.13",
     "antlr4ts-cli": "^0.5.0-alpha.4",
     "typescript": "^4.9.3"
